<resources>
    <string name="app_name">LabelitRealproject</string>



    // howstagram

    <string name="facebook_app_id">873009302900995</string>

    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->


<!--    <string name="email">Email</string>-->

<!--    <string name="password">Password</string>-->

    <string name="signin_email">Signup or Signin by email</string>

    <string name="signin_google">Google login</string>

    <string name="signin_facebook">Facebook login</string>

    <string name="signup_complete">Membership success</string>

    <string name="signin_complete">Login success</string>

    <string name="signout">Signout</string>

    <string name="signout_success">Signout success</string>

    <string name="signout_fail">Signout fail</string>

    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->


    <string name="home">home</string>

    <string name="search">Search</string>

    <string name="gallery">Gallery</string>

    <string name="favorite">Favorite</string>

    <string name="account">Account</string>

    <!-- Account -->


    <string name="post">Post</string>

    <string name="following">Following</string>

    <string name="follower">Follower</string>

    <string name="follow">Follow</string>

    <string name="follow_cancel">Follow cancel</string>

    <string name="profile">Profile</string>

    <string name="count_0">0</string>

    <!-- Alarm -->


    <string name="alarm_favorite">Liked the press</string>

    <string name="alarm_comment">left a message</string>

    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->


    <string name="send">Send</string>

    <!-- Add Photo -->


    <string name="upload_image">Photo Upload</string>

    <string name="hint_image_content">Image description</string>

    <string name="upload_success">Upload success</string>

    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->


    <string name="back">Back</string>

    <!-- etc -->


    <item name="visible" type="id" />

    <item name="masked" type="id" />


    // private

    //로그인
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>

    <string name="sign_up_agree_description_text">레이블잇 이용약관 동의(필수) 전자 금융거래 이용약관 동의(필수) 개인정보처리방침 동의(필수) 마케팅 정보 메일 SMS 동의(필수)</string>
    <string name="name">이름</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="sign_in_text">레이블잇이 처음이시라면?,</string>
    <string name="sign_in_description_text">소셜 회원이신가요? 그럼</string>
    <string name="sign_up_text">&#160;잠시만요. \n 회원가입 전, \n 약관동의가 필요해요!</string>

    //회원가입

    <string name="sign_up_done">완료</string>
    <string name="sign_up_next">다음</string>

    <string name="sign_up_agree_text1">전체동의</string>
    <string name="sign_up_agree_text2">레이블잇 이용약관 동의(필수)</string>
    <string name="sign_up_agree_text3">전자 금융거래 이용약관 동의(필수)</string>
    <string name="sign_up_agree_text4">개인정보처리방침 동의(필수)</string>
    <string name="sign_up_agree_text5">마케팅 정보 메일 SMS 동의(선택)</string>

    <string name="nickname_input_text">2~10자 이내로 입력해주세요</string>
    <string name="password_input_text">비밀번호를 입력해주세요</string>
    <string name="birthday_input_text">ex) 2002 03 14</string>
    <string name="birthday">생년월일</string>
    <string name="nickname">닉네임</string>
    <string name="duplicate_verify">중복확인</string>
    <string name="phone">휴대전화</string>
    <string name="auth_number">인증번호</string>
    <string name="sign_ok">ok</string>
    <string name="sign_wrong">wrong</string>
    <string name="auth_number_resend">인증번호 재전송</string>
    <string name="auth_number_re_verify">인증번호 재인증</string>



    <string name="forgot_password">비밀번호 찾기</string>
    <string name="forgot_id">아이디 찾기</string>

    <string name="nav_my_profile">내정보</string>
    <string name="nav_sign_out">로그아웃</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="app_title">Labelit</string>


    <string name="create_project">프로젝트 생성</string>
    <string name="create">생성</string>
    <string name="project_name">프로젝트 제목</string>
    <string name="project_category">프로젝트 카테고리</string>
    <string name="project_description">프로젝트 설명</string>
    <string name="project_member_count">프로젝트 인원수</string>









    //기타 소스


    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>


    <string name="default_notification_channel_id">notification_channel_id</string>
















    // 인도 인증앱

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with
        Firebase.
    </string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>