<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_sign_up_agree_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/toolbar_btn_Margin_StartEnd"
            android:layout_marginTop="@dimen/toolbar_title_marginTop"

            android:layout_gravity = "left"
            android:src="@drawable/ic_baseline_clear_24">

        </ImageView>



        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/toolbar_title_marginTop"
            android:text="@string/sign_up"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>



        <TextView
            android:id="@+id/sign_up_screen_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up_text"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/sign_up_screen_text"
            android:textStyle="bold"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/sign_up_check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/sign_up_Margin_Left"
            android:text="@string/sign_up_agree_text1" />

<!--    </LinearLayout>-->

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sign_up_check2"
        android:layout_width="wrap_content"

        android:layout_marginLeft="@dimen/sign_up_Margin_Left"
        android:layout_height="wrap_content"

        android:text="@string/sign_up_agree_text2"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sign_up_check3"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/sign_up_Margin_Top"
        android:layout_marginLeft="@dimen/sign_up_Margin_Left"
        android:layout_height="wrap_content"

        android:text="@string/sign_up_agree_text3" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sign_up_check4"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/sign_up_Margin_Top"
        android:layout_marginLeft="@dimen/sign_up_Margin_Left"

        android:layout_height="wrap_content"
        android:text="@string/sign_up_agree_text4" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sign_up_check5"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/sign_up_Margin_Top"
        android:layout_marginLeft="@dimen/sign_up_Margin_Left"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_agree_text5" />

    <Button
        android:id="@+id/btn_sign_up_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="220dp"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/button_round_corner_unactivate"
        android:enabled="false"

        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up_next"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />

</LinearLayout>
