<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/toolbar_btn_Margin_StartEnd"
            android:layout_marginTop="@dimen/toolbar_title_marginTop"

            android:src="@drawable/ic_baseline_keyboard_arrow_left_24">

        </ImageView>

        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/toolbar_title_marginStartEnd"
            android:layout_marginTop="@dimen/toolbar_title_marginTop"
            android:layout_marginEnd="@dimen/toolbar_title_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_up_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toolbar_title_marginTop"
            android:layout_marginEnd="@dimen/toolbar_btn_Margin_StartEnd"
            android:gravity="center"
            android:text="@string/sign_up_done"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/project_upload_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/project_name"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_up_activity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

    </TextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_project_upload_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/sign_up_input_text_margin_TopBottom"
        android:layout_marginRight="30dp"
        android:hint="@string/nickname_input_text"
        android:inputType="textPassword"
        android:textSize="@dimen/et_text_size"
        app:layout_constraintTop_toBottomOf="@id/project_upload_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/project_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/project_category"
        app:layout_constraintTop_toBottomOf="@id/et_project_upload_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

    </TextView>


    <Spinner
        android:id="@+id/spinner_project_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/project_category"
        app:layout_constraintTop_toBottomOf="@id/et_project_upload_title" />


    <Spinner
        android:id="@+id/spinner_member_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/project_member_count"
        app:layout_constraintTop_toBottomOf="@id/project_description"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/project_member_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/project_member_count"
        app:layout_constraintTop_toBottomOf="@id/project_description"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="30dp">

    </TextView>


    <TextView
        android:id="@+id/project_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/project_description"
        app:layout_constraintTop_toBottomOf="@id/project_category"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

    </TextView>

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </ScrollView>

    <TextView
        android:id="@+id/project_description_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:padding="20dp"
        android:text="여기에 설명"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="273dp">

    </TextView>

    <!--    </ScrollView>-->

    <!--        <Button-->
    <!--            android:id="@+id/imageAddButton"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:backgroundTint="@color/orange"-->
    <!--            android:text="이미지 등록하기"-->
    <!--            app:layout_constraintEnd_toEndOf="@id/photoImageView"-->
    <!--            app:layout_constraintStart_toStartOf="@id/photoImageView"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/photoImageView">-->

    <!--        </Button>-->

    <!--        <ImageView-->
    <!--            android:id="@+id/photoImageView"-->
    <!--            android:layout_width="250dp"-->
    <!--            android:layout_height="250dp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="project_description_detail" />-->

</androidx.constraintlayout.widget.ConstraintLayout>